--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -21,6 +21,9 @@
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="/demo/css/styles.css" rel="stylesheet" />
 
+    <!-- JQUERY -->
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+
 
 <!--    main resource-->
     <!-- Favicons -->
