--- a/src/main/resources/templates/food/addMenu.html
+++ b/src/main/resources/templates/food/addMenu.html
@@ -3,14 +3,6 @@
 <head th:replace="fragments/header :: header">
     <meta charset="UTF-8">
     <title>Title</title>
-    <style type="text/css">
-        input[type='text'] {
-            width: 300px;
-            height: 200px;
-            font-size: 30px;
-        }
-
-    </style>
 </head>
 <body>
 <div th:replace="fragments/nav-right :: nav-right"/>
@@ -45,31 +37,31 @@
 <script type="application/javascript">
     $(document).ready(function(){
         const $mom = $("#mom");
-        const $clone = $(".clone");
+        const $cloneDiv = $(".cloneDiv");
+        const $clone = $(".clone").clone();
         const $addBtn = $(".addBtn");
         const $upBtn = $(".upBtn");
-        let changeNo = 0;
+        let currentNo = 1; // 로우 증가, 감소, 로 인덱스 번호를 지정해주고, 이미지가 change 된 곳의 이미지를 반영할수 있다.
+        let changeNo = 0; // change 이벤트 발생시 - display Image change 대상을 찾기 위한 변수
 
-        $mom.on("click", $addBtn, function(e){
+        /**
+         *  이벤트 버블링 방지를 tr, td 가 아닌 div 로 잡으면 인식을 못하는것인가???? 뭐지???
+         * */
+        $mom.on("click", "tr", function(e){
             if($addBtn.attr("class") == e.target.className){
-                addHtml(); //버튼 클릭시 로우 증가 + 로우의 인덱스 번호 값넣기
+                currentNo++;
+                addHtml($clone, currentNo); // 1. currentNo 증가 + 2. append 할 로우의 인덱스 번호 값넣기 + 3. append 할 이미지가 초기화 되어야 한다.
+                console.log("currentNo = " + currentNo);
             }
         });
 
         $mom.on("click", "td", function(e){
             if($upBtn.attr("class") == e.target.className){
                 console.log("upBtn click");
-                let thisParent = $(this).parent(); // 현재 위치의 부모 엘리먼트는 -> tr class = "clone"
-
-                const noValHtml = thisParent.find("#noVal").html(); // 현재 위치에 #noVal 의 html 이 갖고 있는 인덱스 번호
-                const displaySingleFile = thisParent.find(".displaySingleFile");
-
                 $(this).find("input[type='file']").click(); // 빨간색 UP 버튼을 클릭시 같은 위치 위임한 input file 이 클릭되도록 하는것;
-                // displaySingleFile.attr("src", "");
-                displaySingleFile.attr("data-id", noValHtml);
 
-                changeNo = displaySingleFile.attr("data-id");
-                // alert(changeNo);
+                makeChangeNo($(this));
+
             }
         });
 
@@ -77,25 +69,33 @@
             if($(".upload-file").attr("class") == e.target.className) {
                 let thisParent = $(this).closest("td");
                 // console.log("thisParent  =  " + thisParent.html());
-                var formData = new FormData();
-                var singleFile = thisParent.find($("input[name='singleFile']")); // 배열로 담는구나
-                var file = null;
+                let formData = new FormData();
+                let singleFile = thisParent.find($("input[name='singleFile']")); // 배열로 담는구나
+                let file = null;
                 changeFile(formData, singleFile, file);
             }
         });
 
+<!-- ================================ [ function field ]======================================= -->
 
-        function addHtml(){
-            const cloneId = $(".clone").clone();
+        function addHtml(clone, currentNo){
+            const cloneId = clone;
+            cloneId.find("#noVal").html(currentNo);
+            cloneId.find(".displaySingleFile").attr("data-id", currentNo);
+
             const prefix = "<tr class='clone' data-index=\"0\" height='70x'>";
             const suffix = "</tr>";
 
             let appendTr = prefix + cloneId.html() + suffix;
+
             $mom.prepend(appendTr);
 
-            $("#noVal").each(function (i, obj) {
-                $(obj).html(parseInt($(obj).html()) + 1);
-            });
+        }
+
+        function makeChangeNo(thisEm){
+            let thisParent = thisEm.closest(".clone"); // 현재 위치의 부모 엘리먼트는 -> tr class = "clone"
+            const displaySingleFile = thisParent.find(".displaySingleFile");
+            changeNo = displaySingleFile.attr("data-id"); // 파일 change 시에 필요한 인덱스 번호
         }
 
         function changeFile(formData, singleFile, file){
@@ -138,48 +138,3 @@
     });
 </script>
 
-<script type="application/javascript">
-    $(document).ready(function(){
-        const table = $("table");
-        table.css("color", "#f07810");
-        table.css("margin-top", "100px");
-        table.css("margin-bottom", "250px");
-
-        const table_button = $("button");
-        table_button.css("border-bottom-left-radius", "50px");
-        table_button.css("border-bottom-right-radius", "50px");
-
-        const tr = $("tr");
-        tr.css("height", "70px");
-
-        const trInput = $("tr input")
-        trInput.css("width", "100%");
-        trInput.css("height", "35px");
-        trInput.css("background-color", "#414141");
-        trInput.css("color", "#e3e1c8");
-        trInput.css("border", "0");
-        trInput.css("font-size", "11px");
-        trInput.css("border", "3px solid gray");
-
-
-        const addrmbtn = $("#add-rm-btn > button, span");
-        addrmbtn.css("width", "33%");
-        addrmbtn.css("font-size", "5px");
-        addrmbtn.css("color", "#FFD034");
-
-        const displayImage = $(".displaySingleFile");
-        displayImage.css("width", "70").css("height", "40");
-        displayImage.css("border-radius", "60%").css("overflow", "hidden");
-        displayImage.css("border", "3px solid gray");
-
-        const upBtn = $(".upBtn");
-        upBtn.css("background-color", "#221E1D");
-        upBtn.css("border-radius", "20%");
-        upBtn.css("border", "3px solid red");
-        upBtn.css("border-color", "");
-        upBtn.css("width", "45").css("height", "30");
-        upBtn.css("margin-left", "5px").css("height", "30");
-
-
-    });
-</script>
