--- a/src/main/resources/templates/food/fragments/appendFormToMenu.html
+++ b/src/main/resources/templates/food/fragments/appendFormToMenu.html
@@ -13,7 +13,7 @@
         </th>
         <td class="align-middle">
             <div>
-                <img th:src="@{/my-custom/images/images.jpg}" class="displaySingleFile" data-id=""/>
+                <img th:src="@{/my-custom/images/images.jpg}" class="displaySingleFile" data-id="1"/>
             </div>
         </td>
         <td class="align-middle">
