--- a/src/main/resources/templates/food/fragments/appendFormToMenu.html
+++ b/src/main/resources/templates/food/fragments/appendFormToMenu.html
@@ -5,7 +5,7 @@
 <div th:fragment="appendFormToMenu">
     <tr class="clone" data-index="0">
         <th class="align-middle">
-            <div id="add-rm-btn">
+            <div class="add-rm-btn">
                 <button type="button" class="addBtn btn-primary">+</button>
                 <span id="noVal">1</span>
                 <button type="button" class="rmBtn btn-danger">-</button>
