--- a/src/main/resources/templates/food/menu.html
+++ b/src/main/resources/templates/food/menu.html
@@ -17,7 +17,8 @@
             <h2>Menu</h2>
             <p>Check Our Tasty Menu</p>
             <div class="mt-2">
-                <a href="/food/addFood"><button class="btn-primary ml-2">등록</button></a>
+                <a href="/admin/food/addFood"><button class="btn-primary ml-2">등록</button></a>
+                <a href="/admin/food/addMenu"><button class="btn-primary ml-2">멀티등록</button></a>
                 <button class="btn-primary ml-2">수정</button>
                 <button class="btn-primary ml-2">삭제</button>
             </div>
