--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -99,4 +99,8 @@
     <!-- Template Main JS File -->
     <script src="/rest/assets/js/main.js"></script>
 
+    <!-- my-custom js -->
+    <script src="/my-custom/js/food.js"></script>
+    <script src="/my-custom/js/uploadFile.js"></script>
+
 </div>
