--- a/src/main/resources/static/my-custom/css/addMenu.css
+++ b/src/main/resources/static/my-custom/css/addMenu.css
@@ -2,8 +2,29 @@
 
 table {
     color: #f07810 !important;
-    margin-top: 100px;
+    margin-top: 25px;
     margin-bottom: 250px;
+}
+
+
+
+#head_text {
+    margin-top: 150px !important;
+}
+
+h5{
+    margin-top: 50px;
+}
+
+button[type='submit'] {
+    margin-top: 30px;
+    border-bottom-left-radius: 20%;
+    border-bottom-right-radius: 20%;
+
+    background-color: greenyellow;
+    border: 5px solid darkgoldenrod;
+    color: darkblue;
+    font-size: 30px;
 }
 
 button {
@@ -15,13 +36,32 @@ tr {
     height: 70px;
 }
 
-tr input {
+tr th {
+    font-size: 10px;
+    text-align: center;
+}
+
+tr input{
     width: 100%;
     height: 35px;
     background-color: #204969;
     color: #e3e1c8;
     border: 0;
     font-size: 11px;
+    border: 3px solid gray;
+}
+
+.select-box {
+    text-align: center;
+}
+
+tr select {
+    width: 100%;
+    height: 20%;
+    background-color: #204969;
+    color: #e3e1c8;
+    border: 0;
+    font-size: 10px;
     border: 3px solid gray;
 }
 
@@ -46,6 +86,6 @@ tr input {
     /*border-color: ;*/
     width: 45px;
     height: 30px;
-    margin-left: 5px;
-    height: 30px;
+    text-align: center;
+    margin-left: 12px;
 }
