--- a/src/main/resources/templates/admin/food/addFood.html
+++ b/src/main/resources/templates/admin/food/addFood.html
@@ -52,7 +52,7 @@
                     <label class="ml-auto col-6">
                         분류 2
                     </label>
-                    <select id="foodKindStatus" class="ml-auto col-6">
+                    <select id="foodKindStatus" name="foodGroupsOfTitle" class="ml-auto col-6">
                         <option value="">select 1 을 먼저 선택 하세요=</option>
                     </select>
                 </div>
@@ -116,33 +116,6 @@
 <script type="application/javascript">
 $(document).ready(function(){
 
-
-    /**
-     * select 1 을 선택해야 select 2 의 목록의 리스트가 생성된다.
-     */
-    $('#foodGroups').on("change", function(e){
-        let val = $("#foodGroups option:selected").val();
-
-        $.ajax({
-            type : "GET",
-            url : "/food/getValues",
-            data : {foodGroupsName: val},
-            success : function(data){
-                console.log("ajax 서버응답 data : " + data);
-                let str = "";
-                str += "<option value='"+ val+ "'>" + "상품을 선택하세요" + "</option>";
-                $.each(data, function(index, val){
-                    str += "<option value='"+ val+ "'>" + val+ "</option>";
-                });
-
-                //console.log(str);
-                $("#foodKindStatus").html(str);
-
-            }// end .success
-        }); //end .ajax
-    }); // end change event
-
-
     /**
      * file 을 업로드 하면 사용자에 바로 이미지를 보여주도록 한다. rest 방식으로 응답값을 받아온다.
      * */
@@ -172,7 +145,34 @@ $(document).ready(function(){
     }); // end singleFile upload event
 
 
-    // 싱글파일 이미지 보여주기 - rest 응답
+    /**
+     * FoodController 에  /food/getValues 요청시 enum 리스트를 받아서 select 박스를 구현한다.
+     * select 1 을 선택해야 select 2 의 목록의 리스트가 생성된다.
+     */
+    $('#foodGroups').on("change", function(e){
+        let val = $("#foodGroups option:selected").val();
+
+        $.ajax({
+            type : "GET",
+            url : "/food/getValues",
+            data : {foodGroupsName: val},
+            success : function(data){
+                console.log("ajax 서버응답 data : " + data);
+                let str = "";
+                str += "<option value='"+ val+ "'>" + "상품을 선택하세요" + "</option>";
+                $.each(data, function(index, val){
+                    str += "<option value='"+ val+ "'>" + val+ "</option>";
+                });
+
+                //console.log(str);
+                $("#foodKindStatus").html(str);
+
+            }// end .success
+        }); //end .ajax
+    }); // end change event
+
+
+// 싱글파일 이미지 보여주기 - rest 응답
     function showSingleFile(result){
 
         var encodeFullPath =  encodeURIComponent(result.fullPath);
@@ -182,7 +182,7 @@ $(document).ready(function(){
 
     }
 
-    // form 에 uploadFileDto 값들을 append 해서 db 에 저장해야 한다.
+// form 에 uploadFileDto 값들을 append 해서 db 에 저장해야 한다.
     function formAppendUploadFileDtoValues(result) {
         $("input[name='uploadFileDto.uploadFolder']").val(result.uploadFolder);
         $("input[name='uploadFileDto.uploadPath']").val(result.uploadPath);
