--- a/src/main/resources/templates/admin/food/addMenu.html
+++ b/src/main/resources/templates/admin/food/addMenu.html
@@ -3,7 +3,9 @@
 <head th:replace="fragments/header :: header">
     <meta charset="UTF-8">
     <title>Title</title>
+    <!-- my-custom css -->
 </head>
+<link href="/my-custom/css/addMenu.css?ver=1" rel="stylesheet">
 <body>
 <div th:replace="fragments/nav-right :: nav-right"/>
 <div th:replace="fragments/nav-top :: nav-top"/>
