--- a/src/main/resources/templates/food/fragments/appendFormToMenu.html
+++ b/src/main/resources/templates/food/fragments/appendFormToMenu.html
@@ -4,7 +4,7 @@
 
 <div th:fragment="appendFormToMenu">
     <tr class="clone" data-index="0">
-        <th class="align-middle">
+        <th class="align-middle" style="width: 10px;">
             <div class="add-rm-btn">
                 <button type="button" class="addBtn btn-primary">+</button>
                 <span id="noVal">1</span>
