--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,6 @@
   <title>Title</title>
 </head>
 <body>
-<div th:replace="fragments/nav-right :: nav-right"/>
 <div th:replace="fragments/nav-top :: nav-top"/>
 <div th:replace="fragments/bodyHeader :: bodyHeader"/>
 
@@ -23,7 +22,7 @@
         </div>
       </div>
       <div class="col-lg-4 d-flex align-items-center justify-content-center" data-aos="zoom-in" data-aos-delay="200">
-        <a href="https://www.youtube.com/watch?v=GlrxcuEDyF8" class="venobox play-btn" data-vbtype="video" data-autoplay="true"></a>
+        <a href="https://www.youtube.com/watch?v=XsX3ATc3FbA" class="venobox play-btn" data-vbtype="video" data-autoplay="true"></a>
       </div>
 
     </div>
