--- a/src/main/resources/templates/fragments/nav-top.html
+++ b/src/main/resources/templates/fragments/nav-top.html
@@ -1,17 +1,36 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <div th:fragment="nav-top">
 <div id="topbar" class="d-flex align-items-center fixed-top">
-    <div class="container d-flex">
-        <div class="contact-info mr-auto">
-            <i class="icofont-phone"></i> +1 5589 55488 55
-            <span class="d-none d-lg-inline-block"><i class="icofont-clock-time icofont-rotate-180"></i> Mon-Sat: 11:00 AM - 23:00 PM</span>
+    <div class="container d-flex col-12">
+        <div class="contact-info d-flex align-items-center col-6">
+            <div class="col-4"><i class="icofont-phone"></i> + 010 6455 9777 : 홍구 </div>
+            <div class="col-8"><span class="d-none d-lg-inline-block"><i class="icofont-clock-time icofont-rotate-180"></i> akinux1004@gmail.com</span></div>
         </div>
-        <div class="languages">
-            <ul>
-                <li>En</li>
-                <li><a href="#">De</a></li>
+        <div class="align-items-center col-6 d-flex mt-3">
+            <ul sec:authorize="!isAuthenticated()" class="d-flex ml-auto">
+                <li class="mr-5">
+                    <a class="" href="/loginForm">로그인</a>
+                </li>
+                <li class="mr-5">
+                    <a class="" href="/joinForm">회원가입</a>
+                </li>
             </ul>
+            <ul sec:authorize="isAuthenticated()" class="d-flex ml-auto">
+                <li class="mr-5">
+                    <span class="" sec:authentication="principal.username"></span>
+                </li>
+                <li class="mr-5">
+                    <span class="" sec:authentication="principal.id"></span>
+                </li>
+                <li class="mr-5">
+                    <a class="" href="/logout">로그아웃</a>
+                </li>
+            </ul>
+<!--            <ul>-->
+<!--                <li>En</li>-->
+<!--                <li><a href="#">De</a></li>-->
+<!--            </ul>-->
         </div>
     </div>
 </div>
@@ -26,15 +45,15 @@
 
         <nav class="nav-menu d-none d-lg-block">
             <ul>
-                <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="#about">About</a></li>
+                <li class="active"><a href="">Home</a></li>
+                <li><a href="#about">회원가입</a></li>
                 <li><a href="/food/menu">Menu</a></li>
                 <li><a href="#specials">Specials</a></li>
                 <li><a href="#events">Events</a></li>
                 <li><a href="#gallery">Gallery</a></li>
                 <li><a href="#chefs">Chefs</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li class="book-a-table text-center"><a href="#book-a-table">Book a table</a></li>
+                <li class="book-a-table text-center"><a href="/admin/adminHome">ADMIN</a></li>
             </ul>
         </nav><!-- .nav-menu -->
 
