--- a/src/main/resources/templates/user/joinForm.html
+++ b/src/main/resources/templates/user/joinForm.html
@@ -1,18 +1,104 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html xmlns:th="http://www.thymeleaf.org">
+<head th:replace="fragments/header :: header">
     <meta charset="UTF-8">
-    <title>회원가입 페이지</title>
+    <title>Title</title>
 </head>
 <body>
 <h1>회원가입 페이지</h1>
 <hr/>
-<form action="/join" method="post">
-    <input type="text" name="username" placeholder="Username"/><br/>
-    <input type="password" name="password" placeholder="Password"/><br/>
-    <input type="email" name="email" placeholder="Email"/><br/>
-    <button>로그인</button>
+<form action="/join" method="post" th:object="${userDto}">
+    <div class="input-group">
+        <label>아이디</label>
+        <input type="text" th:field="*{username}" placeholder="Username"/>
+        <p th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></p>
+    </div>
+    <div class="input-group">
+        <label>이름</label>
+        <input type="text" th:field="*{name}" placeholder="name"/>
+        <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></p>
+    </div>
+    <div class="input-group">
+        <label>패스워드</label>
+        <input type="password" th:field="*{password}" placeholder="Password"/><br/>
+        <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></p>
+    </div>
+    <div class="input-group">
+        <label>이메일</label>
+        <input type="email" th:field="*{email}" placeholder="Email"/><br/>
+        <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></p>
+    </div>
+    <div class="input-group">
+        <label>핸드폰</label>
+        <input type="text" th:field="*{phoneNumber}" placeholder="Phone"/><br/>
+        <p th:if="${#fields.hasErrors('phoneNumber')}" th:errors="*{phoneNumber}"></p>
+    </div>
+    <div class="input-group">
+        <label>우편번호</label>
+        <input type="text" size="5" value="" th:field="*{addressDto.zipcode}" id="zip"><input type="button" value="검색" id="btnAddr" name="btnAddr">
+        <p th:if="${#fields.hasErrors('addressDto')}" th:errors="*{addressDto}"></p>
+    </div>
+    <div class="input-group">
+        <label>주소</label>
+        <input type="text" th:field="*{addressDto.city}" id="addr1" size="50">
+    </div>
+    <div class="input-group">
+        <label>상세주소</label>
+        <input type="text" th:field="*{addressDto.street}" id="addr2" size="10">
+    </div>
+    <br>
+    <button>회원가입</button>
 </form>
+<br><br>
 <a href="/loginForm">로그인 페이지</a>
 </body>
 </html>
+<script src="http://dmaps.daum.net/map_js_init/postcode.v2.js"></script>
+<script th:inline="javascript">
+    $(document).ready(function(){
+
+        $("#btnAddr").click(function(){
+            new daum.Postcode({
+                oncomplete: function(data) {
+                    // 팝업에서 검색결과 항목을 클릭했을때 실행할 코드를 작성하는 부분.
+
+                    // 각 주소의 노출 규칙에 따라 주소를 조합한다.
+                    // 내려오는 변수가 값이 없는 경우엔 공백('')값을 가지므로, 이를 참고하여 분기 한다.
+                    var fullAddr = ''; // 최종 주소 변수
+                    var extraAddr = ''; // 조합형 주소 변수
+
+                    // 사용자가 선택한 주소 타입에 따라 해당 주소 값을 가져온다.
+                    if (data.userSelectedType === 'R') { // 사용자가 도로명 주소를 선택했을 경우
+                        fullAddr = data.roadAddress;
+
+                    } else { // 사용자가 지번 주소를 선택했을 경우(J)
+                        fullAddr = data.jibunAddress;
+                    }
+
+                    // 사용자가 선택한 주소가 도로명 타입일때 조합한다.
+                    if(data.userSelectedType === 'R'){
+                        //법정동명이 있을 경우 추가한다.
+                        if(data.bname !== ''){
+                            extraAddr += data.bname;
+                        }
+                        // 건물명이 있을 경우 추가한다.
+                        if(data.buildingName !== ''){
+                            extraAddr += (extraAddr !== '' ? ', ' + data.buildingName : data.buildingName);
+                        }
+                        // 조합형주소의 유무에 따라 양쪽에 괄호를 추가하여 최종 주소를 만든다.
+                        fullAddr += (extraAddr !== '' ? ' ('+ extraAddr +')' : '');
+                    }
+
+                    // 우편번호와 주소 정보를 해당 필드에 넣는다.
+                    document.getElementById('zip').value = data.zonecode; //5자리 새우편번호 사용
+                    document.getElementById('addr1').value = fullAddr;
+
+                    // 커서를 상세주소 필드로 이동한다.
+                    document.getElementById('addr2').focus();
+                }
+            }).open();
+        });
+
+
+    });
+</script>
