admin 페이지-> 페이징과 search 수정함

--- a/src/main/resources/templates/food/fragments/appendFormToMenu.html
+++ b/src/main/resources/templates/food/fragments/appendFormToMenu.html
@@ -4,7 +4,7 @@
 
 <div th:fragment="appendFormToMenu">
     <tr class="clone" data-index="0">
-        <th class="align-middle" style="width: 10px;">
+        <th class="align-middle index-btn" style="width: 10px;">
             <div class="add-rm-btn">
                 <button type="button" class="addBtn btn-primary">+</button>
                 <span id="noVal">1</span>
@@ -24,7 +24,7 @@
             </select>
         </td>
         <td class="align-middle">
-            <div>
+            <div class="custom-child-flex">
                 <img th:src="@{/my-custom/images/images.jpg}" class="displaySingleFile" data-id="1"/>
             </div>
         </td>
