--- a/src/main/resources/static/my-custom/css/addMenu.css
+++ b/src/main/resources/static/my-custom/css/addMenu.css
@@ -1,21 +1,26 @@
 @charset "UTF-8";
 
+.custom-parent-flex {
+    display: flex;
+}
+
+.custom-child-flex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 table {
     color: #f07810 !important;
-    margin-top: 25px;
-    margin-bottom: 250px;
 }
 
 
 
 #head_text {
-    margin-top: 150px !important;
-}
-
-h5{
     margin-top: 50px;
 }
+
+
 
 button[type='submit'] {
     margin-top: 30px;
@@ -42,6 +47,8 @@ tr th {
     text-align: center;
 }
 
+
+
 tr input{
     width: 100%;
     height: 35px;
@@ -50,6 +57,7 @@ tr input{
     border: 0;
     font-size: 11px;
     border: 3px solid gray;
+    margin-top: 10px;
 }
 
 .select-box {
@@ -64,6 +72,7 @@ tr select {
     border: 0;
     font-size: 10px;
     border: 3px solid gray;
+    margin-top: 5px;
 }
 
 #add-rm-btn > button, span {
@@ -73,20 +82,24 @@ tr select {
 }
 
 .displaySingleFile {
-    width: 70px;
-    height: 40px;
+    width: 80px;
+    height: 50px;
     border-radius: 60%;
     overflow: hidden;
     border: 3px solid #F7B32D;
+    margin-top: 5px;
+    margin-left: 5px;
 }
 
 .upBtn {
+    color: greenyellow;
     background-color: #221E1D;
     border-radius: 20%;
     border: 3px solid red;
     /*border-color: ;*/
-    width: 45px;
-    height: 30px;
+    width: 60px;
+    height: 35px;
     text-align: center;
-    margin-left: 12px;
+    margin-left: 35px;
+    margin-top: 10px;
 }
