--- a/src/main/resources/templates/admin/food/foodList.html
+++ b/src/main/resources/templates/admin/food/foodList.html
@@ -1,59 +1,183 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/header :: header">
+<head th:replace="fragments/admin-header :: dataTable-header">
   <meta charset="UTF-8">
   <title>Title</title>
+  <!-- my-custom css -->
 </head>
+<link href="/my-custom/css/input_select.css" rel="stylesheet">
+<link href="/my-custom/css/paging.css" rel="stylesheet">
+
+
 <body>
+<div th:replace="fragments/admin-nav-top :: nav-top"/>
 <div th:replace="fragments/nav-right :: nav-right"/>
-<div th:replace="fragments/nav-top :: nav-top"/>
 <div th:replace="fragments/bodyHeader :: bodyHeader"/>
 
-<!-- ======= Book A Table Section ======= -->
-<section id="book-a-table" class="book-a-table">
-  <div class="container" data-aos="fade-up">
+<div class="container tableDiv mt-5 mb-5">
+  <div class="p-flex">
+    <div class="col-6">
+      <nav aria-label="Page navigation example">
+        <ul class="pagination"
+            th:with="start=${(pages.number/maxPage)*maxPage + 1},
+                    end=(${(pages.totalPages == 0) ? 1 :
+                            (start + (maxPage - 1) < pages.totalPages ? start + (maxPage -1) : pages.totalPages)})">
 
-    <div class="section-title">
-      <h2>Menu</h2>
-      <p>Check Our Tasty Menu</p>
-      <div class="mt-2">
-        <a href="/admin/food/foodList"><button class="btn-primary ml-2">전체보기</button></a>
-        <a href="/admin/food/addFood"><button class="btn-primary ml-2">등록</button></a>
-        <button class="btn-primary ml-2">수정</button>
-        <button class="btn-primary ml-2">삭제</button>
+          <li class="page-item" th:if="${start > 1}">
+            <a class="page-link" th:data-page="0">처음</a>
+          </li>
+          <li class="page-item" th:if="${start > 1}">
+            <a class="page-link" th:data-page="${start - maxPage}">이전</a>
+          </li>
+          <li class="page-item" th:each="page: ${#numbers.sequence(start, end)}">
+            <a th:class="${pages.number eq page -1 ? 'active page-link' : 'page-link'}" th:text="${page}" th:data-page="${page} -1"></a>
+          </li>
+
+          <li class="page-item" th:if="${end < pages.totalPages}">
+            <a class="page-link" th:data-page="${start + maxPage -1}">다음!</a>
+          </li>
+
+          <li class="page-item" th:if="${end < pages.totalPages}">
+            <a class="page-link" th:data-page="${pages.totalPages-1}">끝!</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <div class="searchDiv p-flex">
+      <div>
+        <select id="foodGroups" name="foodGroups" class="foodGroups ml-auto col-6">
+          <option value="">=select1=</option>
+          <option th:each="group : ${foodGroups}"
+                  th:value="${group.name()}"
+                  th:text="${group.name()}">status</option>
+          <!--th:text="${group.getFoodGroupsName()}">status</option>-->
+        </select>
+      </div>
+      <div>
+        <select id="foodKindStatus" name="foodGroupsOfTitle" class="foodGroupsOfTitle ml-auto col-6">
+          <option value="">=select2=</option>
+        </select>
+      </div>
+      <div>
+        <input type="search" class="SfoodName" placeholder="음식이름" value=""/>
+      </div>
+      <div>
+        <input type="search" class="Sprice" placeholder="가격" value=""/>
+      </div>
+      <div>
+        <button type="button" class="btn btn-success searchBtn">search</button>
       </div>
     </div>
-
-
-    <table class="table table-dark table-striped">
-      <thead>
-        <tr>
-          <td>1</td>
-          <td>2</td>
-          <td>3</td>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>1</td>
-          <td>2</td>
-          <td>3</td>
-        </tr>
-      </tbody>
-    </table>
-
   </div>
-</section><!-- End Book A Table Section -->
+  <table id="table_id" class="table table-striped table-bordered" style="width:100%">
+    <thead>
+    <tr>
+      <th>인덱스</th>
+      <th>음식이름</th>
+      <th>가격</th>
+      <th>수량</th>
+      <th>음식설명</th>
+      <th>이미지등록파일명</th>
+      <th>음식분류1</th>
+      <th>음식분류2</th>
+    </tr>
+    </thead>
+    <tbody>
+    <div th:each="foodItemDto : ${foodItemDtoList}">
+      <tr>
+        <td th:text="${foodItemDto.id}"></td>
+        <td th:text="${foodItemDto.itemName}"></td>
+        <td th:text="${foodItemDto.price}"></td>
+        <td th:text="${foodItemDto.stockQuantity}"></td>
+        <td th:text="${foodItemDto.explains}"></td>
+        <td th:text="${foodItemDto.uploadFileDto.getClientFileName()}"></td>
+        <td th:text="${foodItemDto.foodGroups}"></td>
+        <td th:text="${foodItemDto.foodGroupsOfTitle}"></td>
+      </tr>
+    </div>
+    </tbody>
+  </table>
 
+</div>
 
-<div th:replace="fragments/footer :: footer"/>
+<form class="foodSearchForm" action="" method="get">
+  <input type="hidden" name="pageNum" value="">
+  <input type="hidden" name="foodGroups" value="">
+  <input type="hidden" name="foodGroupsOfTitle" value="">
+  <input type="hidden" name="foodName" value="">
+  <input type="hidden" name="price" value="">
+</form>
+
+<div th:replace="fragments/admin-footer :: dataTable-footer"/>
+<!--<div th:replace="fragments/footer :: footer"/>-->
 </body>
 </html>
 
+<script type="application/javascript">
+  $(document).ready(function (){
+    const $form = $(".foodSearchForm");
+    const $pageNum = $("input[name='pageNum']");
+    const $foodGroups = $("input[name='foodGroups']");
+    const $foodGroupsOfTitle = $("input[name='foodGroupsOfTitle']");
+    const $foodName = $("input[name='foodName']");
+    const $price = $("input[name='price']");
 
-<script th:inline="javascript">
-  /*<![CDATA[*/
-  var query = [[${foodDto}]];
-  console.log(query);
-  /*]]>*/
+
+
+    $(".searchBtn, .page-link").on("click", function(e){
+      e.preventDefault();
+      let pageNum = $(this).attr("data-page");
+      console.log($pageNum);
+      $pageNum.val(pageNum);
+
+      let SfoodGroup = $(".foodGroups").val();
+      let SfoodGroupsOfTitle = $(".foodGroupsOfTitle").val();
+      let SfoodName = $(".SfoodName").val();
+      let Sprice = $(".Sprice").val();
+
+      $foodGroups.val(SfoodGroup);
+      $foodGroupsOfTitle.val(SfoodGroupsOfTitle);
+      $foodName.val(SfoodName);
+      $price.val(Sprice);
+
+      $form.submit();
+    });
+
+  });
 </script>
+
+<script type="application/javascript">
+$(document).ready(function(){
+  $(".foodGroups").on("change", function (e){
+    if($(".foodGroups").attr("class") == e.target.className) {
+      let groupVal = $(this).find("option:selected").val();
+      // console.log($(this).html());
+      // console.log(groupVal);
+      let $foodKindStatus = $(".searchDiv").find("#foodKindStatus");
+      console.log($foodKindStatus.html());
+
+      $.ajax({
+        type: "GET",
+        url: "/food/getValues",
+        data: {foodGroupsName: groupVal},
+        success: function (data) {
+          console.log("ajax 서버응답 data : " + data);
+          let str = "";
+          str += "<option value=''>" + "상품을 선택하세요" + "</option>";
+          $.each(data, function (index, val) {
+            str += "<option value='" + val + "'>" + val + "</option>";
+          });
+
+          // console.log(str);
+
+          $foodKindStatus.html(str);
+
+        }// end .success
+      }); //end .ajax
+    } //end if
+  });
+
+});
+</script>
+
+
