--- a/src/main/resources/templates/fragments/admin-nav-top.html
+++ b/src/main/resources/templates/fragments/admin-nav-top.html
@@ -1,43 +1,28 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <div th:fragment="nav-top">
-<div id="topbar" class="d-flex align-items-center fixed-top">
-    <div class="container d-flex">
-        <div class="contact-info mr-auto">
-            <i class="icofont-phone"></i> +1 5589 55488 55
-            <span class="d-none d-lg-inline-block"><i class="icofont-clock-time icofont-rotate-180"></i> Mon-Sat: 11:00 AM - 23:00 PM</span>
+
+    <!-- ======= Header ======= -->
+    <header id="header" class="fixed-top">
+        <div class="container d-flex align-items-center">
+
+            <h1 class=""><a href="index.html">ADMIN</a></h1>
+            <!-- Uncomment below if you prefer to use an image logo -->
+            <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+
+            <nav class="nav-menu d-none d-lg-block">
+                <ul>
+                    <li class="book-a-table text-center"><a href="/">HOME</a></li>
+                    <li><a href="/admin/user/users">회원목록</a></li>
+                    <li><a href="/admin/food/foodList">푸드리스트</a></li>
+                    <li><a href="#events">푸드단일등록</a></li>
+                    <li><a href="/admin/addMenu">푸드멀티등록</a></li>
+                    <li><a href="#gallery">Gallery</a></li>
+                    <li><a href="#chefs">Chefs</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav><!-- .nav-menu -->
+
         </div>
-        <div class="languages">
-            <ul>
-                <li>En</li>
-                <li><a href="#">De</a></li>
-            </ul>
-        </div>
-    </div>
-</div>
-
-<!-- ======= Header ======= -->
-<header id="header" class="fixed-top">
-    <div class="container d-flex align-items-center">
-
-        <h1 class="logo mr-auto"><a href="index.html">Restaurantly</a></h1>
-        <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
-
-        <nav class="nav-menu d-none d-lg-block">
-            <ul>
-                <li class="active"><a href="">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="/food/menu">Menu</a></li>
-                <li><a href="#specials">Specials</a></li>
-                <li><a href="#events">Events</a></li>
-                <li><a href="#gallery">Gallery</a></li>
-                <li><a href="#chefs">Chefs</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li class="book-a-table text-center"><a href="/">HOME</a></li>
-            </ul>
-        </nav><!-- .nav-menu -->
-
-    </div>
-</header><!-- End Header -->
+    </header><!-- End Header -->
 </div>
