--- a/src/main/resources/templates/fragments/nav-right.html
+++ b/src/main/resources/templates/fragments/nav-right.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <div class="header" th:fragment="nav-right">
-  <!-- Navigation-->
-  <a class="menu-toggle rounded" href="#"><i class="fas fa-bars"></i></a>
-  <nav id="sidebar-wrapper">
-    <ul class="sidebar-nav">
-      <li class="sidebar-brand"><a href="#page-top">sub nav</a></li>
-      <li class="sidebar-nav-item"><a href="#page-top">Home</a></li>
-      <li class="sidebar-nav-item"><a href="#about">About</a></li>
-      <li class="sidebar-nav-item"><a href="#services">Services</a></li>
-      <li class="sidebar-nav-item"><a href="#portfolio">Portfolio</a></li>
-      <li class="sidebar-nav-item"><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
-  <!-- Header-->
+<!--  &lt;!&ndash; Navigation&ndash;&gt;-->
+<!--  <a class="menu-toggle rounded" href="#"><i class="fas fa-bars"></i></a>-->
+<!--  <nav id="sidebar-wrapper">-->
+<!--    <ul class="sidebar-nav">-->
+<!--      <li class="sidebar-brand"><a href="#page-top">sub nav</a></li>-->
+<!--      <li class="sidebar-nav-item"><a href="#page-top">Home</a></li>-->
+<!--      <li class="sidebar-nav-item"><a href="#about">About</a></li>-->
+<!--      <li class="sidebar-nav-item"><a href="#services">Services</a></li>-->
+<!--      <li class="sidebar-nav-item"><a href="#portfolio">Portfolio</a></li>-->
+<!--      <li class="sidebar-nav-item"><a href="#contact">Contact</a></li>-->
+<!--    </ul>-->
+<!--  </nav>-->
+<!--  &lt;!&ndash; Header&ndash;&gt;-->
 </div>
